// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<CheckboxField
  defaultColor="white"
  selectedColor="#1995ea"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</CheckboxField>
`;

exports[`renders background color when checked 1`] = `
<CheckboxField
  defaultColor="white"
  selected={true}
  selectedColor="#1995ea"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        undefined,
        Object {
          "fontFamily": "FontAwesome",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</CheckboxField>
`;
